show brush cursor while in brush mode, add ability to change brush size, make sure brush cursor size and brushed area are equal (#1937)

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -63,7 +63,7 @@ body:-webkit-full-screen {
 }
 
 .label {
-  margin-right: .2em;
+  margin-right: 0.2em;
 }
 
 .well form {
@@ -91,7 +91,7 @@ td.nowrap * {
 
 .table-details {
   .details-row > td {
-    box-shadow: inset 0 0 10px rgba(180, 180, 180, .2);
+    box-shadow: inset 0 0 10px rgba(180, 180, 180, 0.2);
   }
   .details-toggle,
   .details-toggle-all {
@@ -170,7 +170,7 @@ td.nowrap * {
     position: relative;
   }
   .alert:hover {
-    box-shadow: 0 0 10px rgba(100, 100, 100, .2);
+    box-shadow: 0 0 10px rgba(100, 100, 100, 0.2);
   }
   .alert iframe {
     border: none;
@@ -334,7 +334,7 @@ td.nowrap * {
 }
 
 //submit issue form
-textarea[name=description] {
+textarea[name="description"] {
   height: 100px;
 }
 // make sure text and icons have space between them
