--- a/app/views/help/keyboardshortcuts.scala.html
+++ b/app/views/help/keyboardshortcuts.scala.html
@@ -96,11 +96,12 @@
     </thead>
     <tbody>
       <tr><td>Left click</td><td>Set active cell</td></tr>
-      <tr><td>Left Mouse drag</td><td>Move (Move mode) / Add to current Cell (Trace mode)</td></tr>
+      <tr><td>Left Mouse drag</td><td>Move (Move mode) / Add to current Cell (Trace/Brush mode)</td></tr>
       <tr><td>Arrow keys</td><td>Move</td></tr>
       <tr><td>Shift + Left Mouse drag / Right Mouse drag</td><td>Remove voxels from cell</td></tr>
       <tr><td>C</td><td>Create new cell</td></tr>
-      <tr><td>W, 1</td><td>Toggle Move / Trace mode</td></tr>
+      <tr><td>W, 1</td><td>Toggle Move / Trace / Brush mode</td></tr>
+      <tr><td>Shift + Mousewheel</td><td>Change brush size (Brush mode)</td></tr>
     </tbody>
   </table>
 
