fixed registration form field names #1194

--- a/app/views/mainHeader.scala.html
+++ b/app/views/mainHeader.scala.html
@@ -109,8 +109,8 @@
             </li>
           </ul>
         }.getOrElse {
-            <a href="/signup" class="btn btn-default navbar-btn navbar-right">Sign up</a>
-            <form action="/auth/login" method="POST" class="navbar-form navbar-right">
+            <a href="/register" class="btn btn-default navbar-btn navbar-right">Sign up</a>
+            <form action="/api/login" method="POST" class="navbar-form navbar-right">
               <input type="email" id="email" name="email" placeholder="Email" class="form-control">
               <input type="password" id="password" name="password" placeholder="Password" class="form-control">
               <button type="submit" class="form-control btn btn-primary">Login</button>
