Add Brush tool to volume mode (#2036)
* fix wrong call of direction reducer

* clean up unused code in volume tracing

* implement first version of brush mode for volume tracing

* refactor volume mode to be volume tool instead, add brush tool in UI and code, fix tests (#1937)

* remove contour while using the brush tool as it distracts, make sure the brush creates circles and no ellipses due to different z-scale (#1937)

* show brush cursor while in brush mode, add ability to change brush size, make sure brush cursor size and brushed area are equal (#1937)

* apply PR feedback, fix 5 test files that were not run, enhance volume tracing performance (#1937)

* fix flow (#1937)

* apply PR feedback, change cell selection to shift click, fix scroll (#1937)

* make circle more round (#2036)

--- a/app/views/help/keyboardshortcuts.scala.html
+++ b/app/views/help/keyboardshortcuts.scala.html
@@ -72,6 +72,7 @@
       </tr>
     </thead>
     <tbody>
+      <tr><td>Shift + Left click</td><td>Select active node</td></tr>
       <tr><td>Mouse drag or Arrow keys</td><td>Rotation</td></tr>
       <tr><td>Space</td><td>Forward</td></tr>
       <tr><td>Ctrl + Space</td><td>Backward</td></tr>
@@ -95,12 +96,13 @@
       </tr>
     </thead>
     <tbody>
-      <tr><td>Left click</td><td>Set active cell</td></tr>
-      <tr><td>Left Mouse drag</td><td>Move (Move mode) / Add to current Cell (Trace mode)</td></tr>
+      <tr><td>Shift + Left click</td><td>Select active cell</td></tr>
+      <tr><td>Left Mouse drag</td><td>Move (Move mode) / Add to current Cell (Trace/Brush mode)</td></tr>
       <tr><td>Arrow keys</td><td>Move</td></tr>
-      <tr><td>Shift + Left Mouse drag / Right Mouse drag</td><td>Remove voxels from cell</td></tr>
+      <tr><td>Right Mouse drag</td><td>Remove voxels from cell</td></tr>
       <tr><td>C</td><td>Create new cell</td></tr>
-      <tr><td>W, 1</td><td>Toggle Move / Trace mode</td></tr>
+      <tr><td>W, 1</td><td>Toggle Move / Trace / Brush mode</td></tr>
+      <tr><td>Shift + Mousewheel</td><td>Change brush size (Brush mode)</td></tr>
     </tbody>
   </table>
 
