--- a/app/views/mainHeader.scala.html
+++ b/app/views/mainHeader.scala.html
@@ -100,7 +100,7 @@
                 <a href="#"><i class="fa fa-edit"></i>Edit Profile</a>
               </li>-->
                 <li>
-                    <a href="/reset"><i class="fa fa-key"></i>Reset password</a>
+                    <a href="/api/changepassword"><i class="fa fa-key"></i>Change password</a>
                 </li>
                 <li>
                     <a href="@routes.Authentication.logout()"><i class="fa fa-power-off"></i>Logout</a>
