added react-router #1194

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -39,16 +39,14 @@ body:-webkit-full-screen {
 .save-error .navbar {
   background-color: #c00;
 }
-.navbar .navbar-brand {
+.logo {
   background: url(/assets/images/oxalis-white.png) 15px center no-repeat;
   padding-left: 43px;
-  font-weight: 400;
-  margin-left: 0px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  height: @navbar-height;
+  height: 40px;
+  float: left;
+  margin-top: 13px;
 }
-.navbar span.navbar-brand:hover {
+.logo:hover {
   color: #999;
 }
 
@@ -63,7 +61,7 @@ body:-webkit-full-screen {
 }
 
 .label {
-  margin-right: .2em;
+  margin-right: 0.2em;
 }
 
 .well form {
@@ -91,7 +89,7 @@ td.nowrap * {
 
 .table-details {
   .details-row > td {
-    box-shadow: inset 0 0 10px rgba(180, 180, 180, .2);
+    box-shadow: inset 0 0 10px rgba(180, 180, 180, 0.2);
   }
   .details-toggle,
   .details-toggle-all {
@@ -170,7 +168,7 @@ td.nowrap * {
     position: relative;
   }
   .alert:hover {
-    box-shadow: 0 0 10px rgba(100, 100, 100, .2);
+    box-shadow: 0 0 10px rgba(100, 100, 100, 0.2);
   }
   .alert iframe {
     border: none;
@@ -334,7 +332,7 @@ td.nowrap * {
 }
 
 //submit issue form
-textarea[name=description] {
+textarea[name="description"] {
   height: 100px;
 }
 // make sure text and icons have space between them
