added activeUser to store #1194

--- a/app/views/pageSkeleton.scala.html
+++ b/app/views/pageSkeleton.scala.html
@@ -21,6 +21,8 @@
     }
   </head>
   <body>
+    <div id="alert-container"></div>
+    <main id="main-container"></main>
       <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
       <!--[if lt IE 9 ]>
