add shift+v shortcut for opposite direction in copy segmentation (#2044)

--- a/app/views/help/keyboardshortcuts.scala.html
+++ b/app/views/help/keyboardshortcuts.scala.html
@@ -103,6 +103,8 @@
       <tr><td>C</td><td>Create new cell</td></tr>
       <tr><td>W, 1</td><td>Toggle Move / Trace / Brush mode</td></tr>
       <tr><td>Shift + Mousewheel</td><td>Change brush size (Brush mode)</td></tr>
+      <tr><td>V</td><td>Copy segmentation of current cell from previous slice</td></tr>
+      <tr><td>Shift + V</td><td>Copy segmentation of current cell from next slice</td></tr>
     </tbody>
   </table>
 
