use correct config setting for auto login

--- a/app/views/pageSkeleton.scala.html
+++ b/app/views/pageSkeleton.scala.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
     <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("bundle/main.css")?nocache=@(webknossos.BuildInfo.commitHash)">
     @Html(com.newrelic.api.agent.NewRelic.getBrowserTimingHeader)
-    @if(play.api.Play.current.mode == play.api.Mode.Dev) {
+    @if(play.api.Play.current.configuration.getBoolean("application.authentication.enableDevAutoLogin")){
       <script src="/autoLogin"></script>
     }
     <script type="text/javascript"
