--- a/app/views/mainHeader.scala.html
+++ b/app/views/mainHeader.scala.html
@@ -48,19 +48,10 @@
                   </li>
                 </ul>
               </li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <li>
+                <a href="/statistics">
                   <i class="fa fa-bar-chart fa-fw"></i>Statistics
-                  <b class="caret"></b>
                 </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="/tasks/overview">Overview</a>
-                  </li>
-                  <li>
-                    <a href="/statistics">Weekly</a>
-                  </li>
-                </ul>
               </li>
             }
             <li class="dropwdown">
