add the possibility to delete an edge and thereby split a tree, fix #2040

--- a/app/views/help/keyboardshortcuts.scala.html
+++ b/app/views/help/keyboardshortcuts.scala.html
@@ -20,6 +20,7 @@
       <tr><td>F, D or Mousewheel</td><td>Move along Z-Axis</td></tr>
       <tr><td>Right click</td><td>Set node</td></tr>
       <tr><td>Shift + Alt + Left click</td><td>Merge two trees</td></tr>
+      <tr><td>Shift + Ctrl + Left click</td><td>Delete edge/Split trees</td></tr>
       <tr><td>K, L</td><td>Scale up/down viewport size</td></tr>
       <tr><td>B, J</td><td>Set/Jump to last branchpoint</td></tr>
       <tr><td>S</td><td>Center active node</td></tr>
