--- a/app/assets/stylesheets/_bootstrap_addons.less
+++ b/app/assets/stylesheets/_bootstrap_addons.less
@@ -62,7 +62,7 @@
 }
 
 // accordion headers
-div[data-toggle='collapse'] {
+div[data-toggle="collapse"] {
   cursor: pointer;
 }
 
@@ -75,10 +75,6 @@ div[data-toggle='collapse'] {
 }
 .navbar {
   min-height: @navbar-height !important;
-}
-
-.alert button.close {
-  margin-left: 10px;
 }
 
 .table .table {
