--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -156,20 +156,14 @@ td.nowrap * {
   display: inline;
 }
 
-#alert-container {
-  position: fixed;
-  right: 20px;
-  top: 60px;
-  z-index: @zindex-modal + 1;
+.ant-notification {
+  z-index: 1040; // make sure we are above nav bar
+  width: auto;
+  max-width: 80vw;
+}
 
-  .alert {
-    cursor: default;
-    position: relative;
-  }
-  .alert:hover {
-    box-shadow: 0 0 10px rgba(100, 100, 100, 0.2);
-  }
-  .alert iframe {
+.ant-notification-notice {
+  iframe {
     border: none;
     height: 200px;
     width: 500px;
@@ -212,7 +206,8 @@ td.nowrap * {
       transform: translateX(0px);
     }
   }
-  .alert-wiggle {
+
+  &.alert-wiggle {
     animation: alert-wiggle 5s infinite;
   }
 }
