--- a/app/assets/stylesheets/antd_overwrites.less
+++ b/app/assets/stylesheets/antd_overwrites.less
@@ -14,3 +14,62 @@
 .ant-tag {
   margin-bottom: 8px;
 }
+
+.ant-notification {
+  z-index: 1040; // make sure we are above nav bar
+  width: auto;
+  max-width: 80vw;
+}
+
+.ant-notification-notice {
+  iframe {
+    border: none;
+    height: 200px;
+    width: 500px;
+    max-width: 80vw;
+    resize: both;
+  }
+
+  @keyframes alert-wiggle {
+    0% {
+      transform: translateX(0px) translateY(0px);
+    }
+    2% {
+      transform: translateX(8px) translateY(-8px);
+    }
+    4% {
+      transform: translateX(-8px) translateY(8px);
+    }
+    6% {
+      transform: translateX(8px) translateY(-8px);
+    }
+    8% {
+      transform: translateX(-8px) translateY(8px);
+    }
+    10% {
+      transform: translateX(8px) translateY(-8px);
+    }
+    12% {
+      transform: translateX(-8px) translateY(8px);
+    }
+    14% {
+      transform: translateX(8px) translateY(-8px);
+    }
+    16% {
+      transform: translateX(-8px) translateY(8px);
+    }
+    18% {
+      transform: translateX(8px) translateY(-8px);
+    }
+    20% {
+      transform: translateX(0px) translateY(0px);
+    }
+  }
+
+  .alert-wiggle {
+    animation-name: alert-wiggle;
+    animation-duration: 5s;
+    animation-delay: 0s;
+    animation-iteration-count: infinite;
+  }
+}
