--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,9 +1,9 @@
-@import "../../../node_modules/bootstrap/less/bootstrap.less";
 @import "../../../node_modules/antd/dist/antd.css";
 @import (inline) "../../../node_modules/c3/c3.css";
 @import "../../../node_modules/font-awesome/less/font-awesome.less";
 
 @import "_variables.less";
+@import "_general.less";
 @import "admin/_task.less";
 @import "admin/_statistics.less";
 @import "_dashboard.less";
@@ -15,7 +15,6 @@
 
 // ----------------------- MAIN STYLES
 body {
-  //background: #000000;
   color: @mainColor;
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 400;
