added container stylesheet #2009

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -201,3 +201,20 @@ img.img-50 {
     }
   }
 }
+
+@media (min-width: 1200px) .container {
+  width: 1170px;
+}
+@media (min-width: 992px) .container {
+  width: 970px;
+}
+@media (min-width: 768px) .container {
+  width: 750px;
+}
+
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
