fixes layout in tracing action bar

--- a/app/assets/stylesheets/trace_view/_action_bar.less
+++ b/app/assets/stylesheets/trace_view/_action_bar.less
@@ -1,5 +1,7 @@
 .action-bar {
-  line-height: 48px;
+  line-height: 32px;
+  display: inline-flex;
+  font-size: 0;
 
   div {
     display: inline-block;
