--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -303,6 +303,10 @@ i {
   margin-right: 5px;
 }
 
+.ant-spin-dot i {
+  margin-right: 0;
+}
+
 .v-center > .v-center-agent {
   display: table-cell;
   vertical-align: middle;
