--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -31,8 +31,11 @@ body:-webkit-full-screen {
   width: 100%;
   height: 100%;
 }
-.save-error .navbar {
-  background-color: #c00;
+.save-error {
+  .ant-layout-header,
+  .ant-menu {
+    background-color: #c00 !important;
+  }
 }
 .logo {
   background: url(/assets/images/oxalis-white.png) 15px center no-repeat;
