renames frontend routes with /auth prefix

--- a/app/views/mail/resetPassword.scala.html
+++ b/app/views/mail/resetPassword.scala.html
@@ -4,7 +4,7 @@ Hello @name,
 your account got activated. You can start tracing at
 
 You are receiving this mail because you requested to change your password.
-To change your password go to @{uri}/finishreset and use the following token to authenticate yourself:
+To change your password go to @{uri}/auth/finishResetPassword and use the following token to authenticate yourself:
 @token
 
 Enjoy using webKnossos
