removed more unused CSS

--- a/app/assets/stylesheets/_dashboard.less
+++ b/app/assets/stylesheets/_dashboard.less
@@ -70,7 +70,7 @@
     display: block;
 
     img {
-      width: 20px;
+      width: 14px;
     }
   }
 }
@@ -91,6 +91,7 @@
     overflow-y: auto;
 
     h3 {
+      color: white;
       word-wrap: break-word;
     }
 
