--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -19,7 +19,7 @@ body {
   font-size: 16px;
   -webkit-font-smoothing: antialised;
   height: ~"calc(100vh - 41px)";
-  padding-top: @navbar-height + 10; //
+  padding-top: @navbar-height;
 }
 
 #main-container > div > .ant-layout-header {
@@ -206,6 +206,7 @@ img.img-50 {
 }
 
 .container {
+  padding-top: 20px;
   margin-left: 20px;
   margin-right: 20px;
   width: auto;
