make CSS .pull-right / .pull-left important

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -123,10 +123,11 @@ td.nowrap * {
 }
 
 .pull-right {
-  float: right;
+  float: right !important;
 }
+
 .pull-left {
-  float: left;
+  float: left !important;
 }
 
 // Fixing font awesome
@@ -213,4 +214,3 @@ img.img-50 {
   padding-left: 15px;
   padding-right: 15px;
 }
-
