update tracing view layout to antd v3

--- a/app/assets/stylesheets/trace_view/_tracing_view.less
+++ b/app/assets/stylesheets/trace_view/_tracing_view.less
@@ -1,5 +1,4 @@
 #tracing {
-
   position: relative;
   display: inline-block;
   vertical-align: top;
@@ -23,7 +22,7 @@
   .inputcatcher {
     width: @standardViewportWidth;
     height: @standardViewportWidth;
-    border-style:solid;
+    border-style: solid;
     border-width: 2px;
     z-index: 20;
     box-sizing: border-box;
@@ -83,7 +82,8 @@
     height: auto;
     min-height: 64px;
   }
-  &.ant-layout, & .ant-layout {
+  &.ant-layout,
+  & .ant-layout {
     overflow: initial;
   }
   .ant-layout-content {
