set a fixed width for task type descriptions; #2225

--- a/app/assets/stylesheets/_dashboard.less
+++ b/app/assets/stylesheets/_dashboard.less
@@ -100,3 +100,10 @@
     }
   }
 }
+
+.task-type-description {
+  word-break: break-word;
+  max-height: 150px;
+  max-width: 300px;
+  overflow-y: auto;
+}
