--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,3 +1,4 @@
+@import "../../../node_modules/antd/lib/style/v2-compatible-reset.less";
 @import "../../../node_modules/antd/dist/antd.css";
 @import "../../../node_modules/font-awesome/less/font-awesome.less";
 
