slightly updated the SVG images to match wK design

--- a/app/assets/stylesheets/_dashboard.less
+++ b/app/assets/stylesheets/_dashboard.less
@@ -56,8 +56,7 @@
       width: 25px;
       height: 25px;
       margin: 7.5px;
-      filter: invert(1);
-      -webkit-filter: invert(1);
+      filter: brightness(0) invert(1);
     }
   }
   a:hover {
