--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -33,11 +33,12 @@ body {
 }
 
 .logo {
-  background: url(/assets/images/oxalis-white.png) 15px center no-repeat;
+  background: url(/assets/images/oxalis-white-2x.png) 15px center no-repeat;
   padding-left: 43px;
   height: 40px;
   float: left;
   margin-top: 6px;
+  background-size: 20px 20px;
 }
 
 .bold {
