--- a/app/views/thankyou.scala.html
+++ b/app/views/thankyou.scala.html
@@ -1,6 +1,6 @@
 @()(implicit session: oxalis.view.SessionData)
 
-@main() {
+@main {
   <div class="container" id="info">
     <h2>Thank you!</h2>
     <p>Thanks a lot for helping to decipher the brain!</p>
