--- a/app/views/info.scala.html
+++ b/app/views/info.scala.html
@@ -1,6 +1,6 @@
 @()(implicit session: oxalis.view.SessionData)
 
-@main() {
+@main {
   <div class="container" id="info">
     <h2>Information</h2>
     <p>What are you looking for? Get tracing!</p>
