--- a/app/views/pageSkeleton.scala.html
+++ b/app/views/pageSkeleton.scala.html
@@ -1,3 +1,5 @@
+@(content: Html)
+
 <!doctype html>
 <html>
   <head>
@@ -23,7 +25,7 @@
     }
   </head>
   <body>
-    <div id="alert-container"></div>
+    <main id="server-content">@content</main>
     <main id="main-container"></main>
       <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
