changed the wording of the some error messages

--- a/app/views/mail/validated.scala.html
+++ b/app/views/mail/validated.scala.html
@@ -1,7 +1,7 @@
 @( name: String, uri: String )
 Hello @name,
 
-your account got activated. You can start tracing at
+your account was activated. You can start tracing at
 
 @uri
 
