applied PR feedback #2220

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -170,7 +170,8 @@ i {
   word-wrap: break-word;
   max-width: 154px;
   font-family: monospace;
-  font-size: 12px;
+  font-size: 14px;
+  width: 135px;
 }
 
 img.img-50 {
