--- a/app/assets/stylesheets/_dashboard.less
+++ b/app/assets/stylesheets/_dashboard.less
@@ -103,6 +103,15 @@
 .task-type-description {
   word-break: break-word;
   max-height: 150px;
-  max-width: 300px;
   overflow-y: auto;
+
+  ul {
+    list-style: disc;
+    padding-left: 2em;
+  }
+
+  ol {
+    list-style: decimal;
+    padding-left: 2em;
+  }
 }
