--- a/app/views/mail/registerAdminNotify.scala.html
+++ b/app/views/mail/registerAdminNotify.scala.html
@@ -1,7 +1,7 @@
 @( user: models.user.User, brainDBresult: String, uri: String )
 The new user @user.name registered at oxalis.at.
 
-Result when trying to register him on braintracing.org:  @brainDBresult
+Result when trying to register her/him on braintracing.org:  @brainDBresult
 
 You can verify this user on @{uri}/users#@{user.id}
 
