--- a/app/assets/stylesheets/antd_overwrites.less
+++ b/app/assets/stylesheets/antd_overwrites.less
@@ -73,3 +73,7 @@
     animation-iteration-count: infinite;
   }
 }
+
+.ant-table-small > .ant-table-content > .ant-table-body > table > .ant-table-tbody > tr > td {
+  padding: 1px 8px;
+}
